--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,18 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
+    "lint": "eslint --ext .js src --fix",
     "dev": "nodemon src/index.js"
   },
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.13"
+    "eslint": "^7.32.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "nodemon": "^2.0.13",
+    "prettier": "^2.4.1"
   },
   "dependencies": {
     "dotenv": "^10.0.0"
