--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "legolise",
+  "name": "legolise-client",
   "author": "MoonBridge",
   "version": "0.1.0",
   "private": true,
@@ -26,6 +26,9 @@
     "lint": "eslint --ext .ts,.tsx src --fix",
     "check-format": "prettier --check ./",
     "format": "prettier --write ./"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "eslint --cache --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -56,6 +59,7 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.4",
+    "lint-staged": "^11.2.3",
     "prettier": "^2.4.1"
   }
 }
