--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node src/index.js",
     "lint": "eslint --ext .js src --fix",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "format": "prettier --write ./"
   },
   "license": "ISC",
   "devDependencies": {
