--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,14 @@
     "prettier": "^2.4.1"
   },
   "dependencies": {
-    "dotenv": "^10.0.0"
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^10.0.0",
+    "fastify": "^3.25.1",
+    "fastify-cookie": "^5.4.0",
+    "fastify-cors": "^6.0.2",
+    "fastify-jwt": "^4.1.1",
+    "fastify-postgres": "^3.6.0",
+    "pg": "^8.7.1",
+    "uuid": "^8.3.2"
   }
 }
