--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,9 @@
     "fastify-cookie": "^5.4.0",
     "fastify-cors": "^6.0.2",
     "fastify-jwt": "^4.1.1",
+    "fastify-mongoose": "^0.3.0",
     "fastify-postgres": "^3.6.0",
+    "mongoose": "^6.1.3",
     "pg": "^8.7.1",
     "uuid": "^8.3.2"
   }
